@@ -114,9 +114,16 @@ namespace libtorrent
 		std::list<udp::endpoint> m_endpoints;
 
 		int m_transaction_id;
-		boost::int64_t m_connection_id;
 		aux::session_impl const& m_ses;
 		int m_attempts;
+
+		struct connection_cache_entry
+		{
+			boost::int64_t connection_id;
+			ptime expires;
+		};
+
+		static std::map<address, connection_cache_entry> m_connection_cache;
 
 		action_t m_state;
 	};
